[project]
name = "blitz-stats"
version = "1.0.0a2"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Tool to fetch, manage and export stats for Wargaming's World of Tanks Blitz game "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1.0",
    "aiohttp>=3.8.4",
    "aiosqlite>=0.19.0",
    "alive-progress>=3.1.1",
    "asyncstdlib>=3.10.6",
    "isort>=5.12.0",
    "pyarrow>=11.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.6.0, ==2.*",
    "motor>=3.1.2",
    "pymongo>=4.3.3",
    "lz4>=4.3.2",
    "sortedcollections>=2.1.0",
    # Fixed commit until Pydantic V2 refactoring done
    "pyutils @ git+https://github.com/Jylpah/pyutils.git@main-1.0",
    "blitz-models @ git+https://github.com/Jylpah/blitz-models.git",
    
]

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "mypy==1.2.0",
    "pip-chill==1.0.3",
    "pytest",
    "pytest-asyncio",
    "pytest-datafiles",
    "yappi>=1.4.0",
    "types-aiofiles>=23.1.0.1",
    "types-requests>=2.28.11.17",
    "pyutils[dev] @ git+https://github.com/Jylpah/pyutils.git@dev",
    "blitz-utils[dev] @ git+https://github.com/Jylpah/blitz-utils.git",
]


[project.urls]
"Homepage" = "https://github.com/Jylpah/blitz-stats"
"Bug Tracker" = "https://github.com/Jylpah/blitz-stats/issues"

[project.scripts]
bs = "blitzstats.bs:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blitzstats"]

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = ['src']

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = false
warn_untyped_fields = true


[tool.ruff]
# line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
indent-width = 4
extend-include = ["*.ipynb"]
extend-exclude = [".venv", ".vscode", "/usr/lib/**"]
fixable = ["ALL"]


[tool.pyright]
reportGeneralTypeIssues = false
